Start organizing as "standalone subprojects"